# biometric-client

./: README.md  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts
app/src/androidTest/java/dmos/example/biometricclient/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  security-lib.cpp
app/src/main/java/dmos/example/biometricclient/di/: AppComponent.java  AppModule.java  DaggerViewModelFactory.java  ViewModelKey.java  ViewModelModule.java
app/src/main/java/dmos/example/biometricclient/nativ/: SecurityNative.java
app/src/main/java/dmos/example/biometricclient/presentation/: MainActivity.java  MainViewModel.java
app/src/main/java/dmos/example/biometricclient/presentation/helpers/: BitmapWrapper.java
app/src/main/res/drawable/: placeholder_document.xml  placeholder_face.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/dmos/example/biometricclient/presentation/: MainViewModelTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
